@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tdodbc-13.10.00.01.1-r3 (28 Mar 2011)
+
+  28 Mar 2011; Alexandre Nuno Oliveira <anm@gentoo.org>
+  +tdodbc-13.10.00.01.1-r3.ebuild:
+  tdodbc-13.10.00.01.1-r3 solves QA Notice: The following shared libraries
+  lack NEEDED entries
+
 *tdodbc-13.10.00.01.1-r2 (28 Mar 2011)
 
   28 Mar 2011; Alexandre Nuno Oliveira <anm@gentoo.org>
